kubernetes/apps/home-system/immich/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich
spec:
  description: "Network policy for Immich photo management"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
    # Allow ingress from envoy-gateway
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
    # Allow access to PostgreSQL
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Allow access to Redis
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: db
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    # Allow access to Zitadel inside the cluster
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: zitadel
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # Allow HTTPS egress for OIDC discovery and callback flows
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
